--- a/calculator-project/styles.css
+++ b/calculator-project/styles.css
@@ -15,6 +15,7 @@ body {
   height: 100vh;
   place-items: center;
   font-family: "Lato", sans-serif;
+  background: url("./sprinkle.webp");
 }
 
 .calculator {
@@ -112,4 +113,9 @@ body {
   font-size: 1.5rem;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
     rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  cursor: pointer;
+}
+
+.btn:active {
+  transform: translateY(2px);
 }
