--- a/tic-tac-toe-project/styles.css
+++ b/tic-tac-toe-project/styles.css
@@ -138,6 +138,62 @@ body {
   background-color: var(--main-bg);
 }
 
+.hidden {
+  display: none;
+}
+
+.flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+
+.modal {
+  height: 100vh;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+  position: absolute;
+}
+
+.child {
+  width: 100%;
+  height: 100%;
+}
+
+.display-winner {
+  text-align: center;
+  font-size: 2.5rem;
+  font-family: "Lato", sans-serif;
+  color: white;
+}
+
+.play-again {
+  width: 125px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 10px;
+  border: 1px solid var(--header-font);
+  background-color: var(--header-font);
+  text-transform: uppercase;
+  color: white;
+  font-weight: 700;
+  letter-spacing: 0.02rem;
+  cursor: pointer;
+  place-self: center;
+}
+
+.play-again:hover {
+  background-color: white;
+  color: black;
+}
+
+.play-again:active {
+  transform: translateY(2px);
+}
+
 .header {
   text-align: center;
   font-size: 3rem;
@@ -147,12 +203,12 @@ body {
 
 #board {
   margin: 0 auto;
-  width: clamp(300px, 75%, 500px);
+  width: clamp(300px, 75%, 400px);
   aspect-ratio: 1 / 1;
   display: Grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  gap: 25px;
+  gap: 20px;
 }
 
 .square {
@@ -174,6 +230,9 @@ body {
 }
 
 .square.user {
-  font-size: 5rem;
   color: #ff5f1f;
+}
+
+.square {
+  font-size: 5rem;
 }
