--- a/battleship/src/index.css
+++ b/battleship/src/index.css
@@ -4,7 +4,140 @@
   margin: 0;
 }
 
+@font-face {
+  font-family: "Black Ops One";
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/blackopsone/v20/qWcsB6-ypo7xBdr6Xshe96H3aDvbtw.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
+    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 300;
+  src: url(https://fonts.gstatic.com/s/lato/v24/S6u9w4BMUTPHh7USSwiPGQ.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
+    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/lato/v24/S6uyw4BMUTPHjx4wXg.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
+    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 700;
+  src: url(https://fonts.gstatic.com/s/lato/v24/S6u9w4BMUTPHh6UVSwiPGQ.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
+    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  height: 100vh;
+  background-color: black;
+}
+
+h1 {
+  font-family: "Black Ops One";
+  font-size: clamp(3rem, 6vw, 5rem);
+  text-align: center;
+  margin: 50px auto auto auto;
+  background: linear-gradient(
+    to top,
+    #f9fafb,
+    #dee4ea,
+    #c5ced9,
+    #acb8c8,
+    #94a3b8
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  border-top: 10px solid rgb(145, 11, 11);
+  width: max-content;
+}
+
+.board {
+  padding-top: 50px;
+  display: flex;
+  flex-wrap: no-wrap;
+  justify-content: center;
+  gap: 50px;
+}
+
+.board .enemy-waters,
+.board .player-waters {
+  position: relative;
+  display: grid;
+  aspect-ratio: 1 / 1;
+  min-width: 300px;
+  max-height: 300px;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  background: rgba(26, 102, 153, 0.65);
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  backdrop-filter: blur(3.5px);
+  -webkit-backdrop-filter: blur(3.5px);
+  border-radius: 0;
+  z-index: 1;
+}
+
+.enemy-waters {
+  cursor: pointer;
+}
+
+.square {
+  border: 1px solid rgba(26, 102, 153, 0.65);
+}
+
+.square:hover,
+.square:active {
+  background-color: rgb(45, 134, 194);
+}
+
+.ship-div {
+  display: flex;
+  gap: 50px;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px;
+}
+
+.ship {
+  display: flex;
+  flex-direction: column;
+  cursor: grab;
+}
+
+.ship.horizontal {
+  flex-direction: row;
+}
+
+.ship:active {
+  cursor: grabbing;
+}
+
+.ship-square {
+  width: 30px;
+  aspect-ratio: 1 / 1;
+  border: 1px solid #cbd5e1;
+  background-color: #94a3b8;
 }
