--- a/battleship/src/index.css
+++ b/battleship/src/index.css
@@ -112,11 +112,12 @@ h1 {
 }
 
 .square {
+  position: relative;
   border: 1px solid rgba(26, 102, 153, 0.65);
 }
 
-.square:hover,
-.square:active {
+.enemy-board .square:not(.hit):hover,
+.enemy-board .square:not(.hit):active {
   background-color: rgb(45, 134, 194);
 }
 
@@ -166,6 +167,32 @@ h1 {
   aspect-ratio: 1 / 1;
   border: 1px solid #cbd5e1;
   background-color: #94a3b8;
+}
+
+.piece {
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+  z-index: 10;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  background-color: white;
+}
+
+.hit {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: red;
+  font-size: 20px;
+  font-weight: 700;
+  text-align: center;
+  color: white;
+  border: 1px solid black;
 }
 
 .start.btn {
