fixing but with game restart

--- a/battleship/src/index.css
+++ b/battleship/src/index.css
@@ -60,13 +60,14 @@ body {
     #1a2e4f,
     #1e293b
   );
+  padding-top: 50px;
 }
 
 h1 {
   font-family: "Black Ops One";
   font-size: clamp(3rem, 6vw, 5rem);
   text-align: center;
-  margin: 50px auto auto auto;
+  margin: 0 auto;
   background: linear-gradient(
     to top,
     #f9fafb,
@@ -195,7 +196,8 @@ h1 {
   border: 1px solid black;
 }
 
-.start.btn {
+.start.btn,
+.restart.btn {
   width: 125px;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -212,9 +214,30 @@ h1 {
     rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
-.start.btn:active {
-  background-color: black;
-  border: 2.5px solid red;
+.start.btn:active,
+.restart.btn:active {
   color: white;
   box-shadow: none;
+}
+
+.game-over {
+  position: absolute;
+  display: grid;
+  place-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
+  right: 0;
+  z-index: 99999;
+  width: 100%;
+  height: 100%;
+}
+
+.game-over div {
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 50px;
 }
