--- a/resume-builder/src/index.css
+++ b/resume-builder/src/index.css
@@ -5,11 +5,7 @@
   --gray-700: #334155;
   --gray-900: #0f172a;
 
-  --primary-100: #deccf8;
-  --primary-300: #a573eb;
-  --primary: #8b4be5;
-  --primary-700: #691ed2;
-  --primary-900: #4d1699;
+  --primary: #334155;
 
   --accent-100: #dcfce7;
   --accent-300: #6ee7b7;
@@ -43,6 +39,11 @@
   box-shadow: none;
 }
 
+.download {
+  text-decoration: none;
+  color: var(--accent-900);
+}
+
 body {
   background-color: var(--gray-100);
   font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -50,13 +51,19 @@ body {
     "Segoe UI Symbol";
 }
 
+.header-wrapper {
+  width: 100%;
+  background-color: var(--primary);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
 .header {
+  max-width: 1100px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px 24px;
-  background-color: var(--primary);
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 h1 {
@@ -304,7 +311,7 @@ article.preview {
 .sidebar {
   display: flex;
   flex-direction: column;
-  background-color: darkgray;
+  background-color: var(--gray-700);
   padding: 12px;
   max-width: 300px;
 }
@@ -322,6 +329,15 @@ article.preview {
   display: flex;
   align-items: center;
   text-transform: capitalize;
+  color: white;
+}
+
+a:not(a.download) {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 
 .sidebar p i {
@@ -342,9 +358,11 @@ article.preview {
   display: flex;
   flex-direction: column;
   gap: 12px;
-  background-color: black;
-  padding: 24px;
-  color: white;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  margin-right: 24px;
+  margin-left: 24px;
+  border-bottom: 3px solid var(--gray-900);
 }
 
 .name-occupation h2 {
@@ -353,11 +371,14 @@ article.preview {
   width: 100%;
   display: flex;
   align-items: center;
+  text-transform: uppercase;
+  color: var(--gray-900);
 }
 
 .name-occupation p {
   font-size: 1.75rem;
-  font-weight: 300;
+  text-transform: uppercase;
+  color: var(--gray-700);
 }
 
 .description {
@@ -369,48 +390,60 @@ article.preview {
   line-height: 1.5rem;
 }
 
-a {
-  text-decoration: none;
-  cursor: pointer;
-  color: inherit;
-}
-
-.work-experience {
+.work-experience,
+.education:not(input.education) {
   display: flex;
   flex-direction: column;
-  gap: 16px;
   padding-left: 20px;
   padding-right: 20px;
+  margin-bottom: 36px;
 }
 
-.work-experience h3 {
+.work-experience h3,
+.education h3 {
   font-weight: 700;
   text-transform: capitalize;
-  border-bottom: 2.5px solid black;
+  border-bottom: 2.5px solid var(--gray-900);
   padding-bottom: 5px;
-}
-
-.work-item {
   display: flex;
-  width: 100%;
-  justify-content: space-between;
+  align-items: center;
+  gap: 8px;
+  color: var(--gray-900);
 }
 
-.work-item h4 {
+h3 i {
+  color: var(--primary);
+}
+
+.work-item,
+.education-item {
+  padding-top: 16px;
+  padding-bottom: 5px;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: var(--gray-300) 1px solid;
+}
+
+.work-item h4,
+.education-item h4 {
   font-weight: 500;
   color: var(--gray-900);
   font-style: none;
+  width: max-content;
 }
 
-.work-item div {
+.work-item div,
+.education-item div {
   display: flex;
   flex-direction: column;
   gap: 8px;
   text-transform: capitalize;
   font-weight: 300;
   color: var(--gray-700);
+  width: max-content;
 }
 
-.work-item div:last-of-type {
+.work-item div:last-of-type,
+.education-item div:last-of-type {
   text-align: end;
 }
